# test_mission

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  db.json  docker-compose.override.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
apps/dds/: admin.py  apps.py  consts.py  models.py  serializers.py  urls.py  views.py
apps/dds/migrations/: 0001_initial.py
main/: urls.py
main/config/: base.py  database.py  logging_config.py  rest_framework.py
