[project]
name = "test-mission"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "django-rest-framework>=0.1.0",
    "django-silk>=5.4.1",
    "drf-spectacular>=0.28.0",
    "env>=0.1.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.12.8",
]
